# thermal-conductivity-sim

./: Cargo.toml  README.md
src/: main.rs  ticker.rs
src/app/: app.rs  mod.rs  model_manager.rs  ui.rs
src/model/: analytic.rs  differential.rs  mod.rs  model.rs  system.rs
src/renderer/: error.rs  mod.rs  renderer.rs  shader.rs  vertex.rs
src/window/: window.rs
