[package]
name = "egui-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14"
egui = "0.16"
sdl2 = "0.35"
egui_sdl2_gl = "0.16.0"
nalgebra = "0.30.1"
rayon = "1.5.1"
exmex = "0.15.0"
num-traits = "0.2.14"
petgraph = "0.6.0"
lapack = "0.19.0"
netlib-src = "0.8.0"


[dependencies.epi]
version = "0.16"
optional = true

[features]
sdl2_unsafe_textures = ["sdl2/unsafe_textures"]
sdl2_gfx = ["sdl2/gfx"]
sdl2_mixer = ["sdl2/mixer"]
sdl2_image = ["sdl2/image"]
sdl2_ttf = ["sdl2/ttf"]
# SDL2 build features
sdl2_use-bindgen = ["sdl2/use-bindgen"]
sdl2_use-pkgconfig = ["sdl2/use-pkgconfig"]
sdl2_use-vcpkg = ["sdl2/use-vcpkg"]
sdl2_use-mac_framework = ["sdl2/use_mac_framework"]
sdl2_bundled = ["sdl2/bundled"]
sdl2_static-link = ["sdl2/static-link"]
use_epi = ["epi"]

[dev-dependencies]
egui_demo_lib = "0.16"